correction admin fonctionnalité importante